# Project_Opencv_Arm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
